--- a/Thesis/content/02_related_work.tex
+++ b/Thesis/content/02_related_work.tex
@@ -91,7 +91,7 @@ There are two workflows of communication for a user in ActivityPub, as shown in 
 \end{figure}
 
 
-Regarding security, although ActivityPub's specification does not define any official security mechanisms, it mentions a list published by the SocialWG of best security practices\footnote{https://www.w3.org/wiki/SocialCG/ActivityPub/Authentication\_Authorization} that may be used in an ActivityPub implementation. This list suggests using standards such as OAuth 2.0\footnote{https://oauth.net/2/} for client-to-server authentication, as well as HTTP Signatures\footnote{https://tools.ietf.org/html/draft-cavage-http-signatures-08} and Linked Data Signatures\footnote{https://w3c-dvcg.github.io/ld-signatures/} for server-to-server authentication. Furthermore, it recommends using HTTPS for its HTTP-based communication to provide transport-layer encryption.
+Regarding security, although ActivityPub's specification does not define any official security mechanisms, it mentions a list published by the SocialWG of best security practices\footnote{https://www.w3.org/wiki/SocialCG/ActivityPub/Authentication\_Authorization} that that are recommended in an ActivityPub implementation. This list suggests using standards such as OAuth 2.0\footnote{https://oauth.net/2/} for client-to-server authentication, as well as HTTP Signatures\footnote{https://tools.ietf.org/html/draft-cavage-http-signatures-08} and Linked Data Signatures\footnote{https://w3c-dvcg.github.io/ld-signatures/} for server-to-server authentication. Furthermore, it recommends using HTTPS for its HTTP-based communication to provide transport-layer encryption.
 
 
 % ------------ActivityPub-Based social networks------------------------------------
@@ -99,7 +99,7 @@ Regarding security, although ActivityPub's specification does not define any off
 
 \subsection{The Fediverse}
 
-It is impossible not to refer to the \emph{Fediverse} when ActivityPub is mentioned. The \emph{Fediverse} is an interoperable collection of different federated social networks running on free open software on thousands of servers across the world that implement the same open-standard protocols to be able to interact with each other. It is developed by a not-profit-driven community of people around the globe independent of any corporation or official institution \cite{holloway_2018} \cite{https://doi.org/10.48550/arxiv.1909.05801}. The simplest way to explain how the federation works is the following example: Bob has a Twitter account, which he uses to follow all his friends that also have a Twitter account. Alice is a friend of Bob, but she only has an account on Youtube. In the real world, these two services are completely isolated and cannot communicate. However, if both had implemented the same social network protocol, such as ActivityPub, Bob would be able to find Alice by a normal search on Twitter and follow her. Allowing any new post of Alice on Youtube, to appear in Bob's Twitter timeline.
+It is impossible not to refer to the \emph{Fediverse} when ActivityPub is mentioned. The \emph{Fediverse} is an interoperable collection of different federated social networks running on free open software on thousands of servers across the world. All these servers implement the same open-standard protocols to be able to interact with each other. It is developed by a not-profit-driven community of people around the globe independent of any corporation or official institution \cite{holloway_2018} \cite{https://doi.org/10.48550/arxiv.1909.05801}. The simplest way to explain how the federation works is the following example: Bob has a Twitter account, which he uses to follow all his friends that also have a Twitter account. Alice is a friend of Bob, but she only has an account on Youtube. In the real world, these two services are completely isolated and cannot communicate. However, if both had implemented the same social network protocol, such as ActivityPub, Bob would be able to find Alice by a normal search on Twitter and follow her. Allowing any new post of Alice on Youtube, to appear in Bob's Twitter timeline.
 
 Before ActivityPub, the \emph{Fediverse} implemented other protocols like \emph{Ostatus}\footnote{https://ostatus.github.io/spec/OStatus\%201.0\%20Draft\%202.html}, \emph{Matrix}\footnote{https://matrix.org}, and \emph{Diaspora}\footnote{https://diaspora.github.io/diaspora\_federation}. However, after ActivityPub was published as a Recommendation by the SocialWG in January 2018, many of these federated social networks upgraded to ActivityPub, becoming the predominant protocol rapidly. Furthermore, the range of services that can be found inside the \emph{Fediverse} includes blogging, microblogging, video streaming, photo, music sharing as well as file hosting. Examples are shown in table \ref{table:fediverse_examples}.
 
@@ -141,10 +141,10 @@ Although it was not the first social network to implement ActivityPub, Mastodon 
   \item Follow other users, even if they are not in the same instance. 
   \item Post small status updates, or \emph{toots}, up to 500 characters long. 
   \item Access to a timeline of the local instance and federated statuses. 
-  \item Control over the visibility of their posts, with the option to set them as private, instance-level only, or federated. 
+  \item Control over the visibility of posts, with the option to set them as private, instance-level only, or federated. 
 \end{itemize}
 
-Mastodon's implementation of ActivityPub follows the guidelines defined by the spec. However, as the protocol does not specify how to implement some key processes required for a fully-working social network, Mastodon extended the protocol with the following processes and features.
+Mastodon's implementation of ActivityPub follows the guidelines defined by the specification. However, as the protocol does not specify how to implement some key processes required for a fully-working social network, Mastodon extended the protocol with the following processes and features.
 
 \subsubsection*{\textbf{Security}}
 Mastodon implemented the authentication and authorization mechanisms from the best practices list of the SocialWG to address the security concerns in ActiviyPub. The ones relevant to this thesis are the HTTP and the JSON-LD signatures. HTTP signatures extend the HTTP protocol by adding the possibility to sign the HTTP requests cryptographically. This signature gets added to the request within the \emph{Signature} header, and it provides not only end-to-end message integrity but also proof of the authenticity of the sender without the need for multiple round-trips \cite{cavage_sporny_2019}. Creating an HTTP signature means signing the parameters of the request itself, i.e the \emph{request-target}, the \emph{host}, and the \emph{date}. These parameters and their values are concatenated in a single string, hashed, and signed with the sender's public key. Finally, the \emph{Signature} header indicates the key used to sign the document, the parameters inside the signature, and the algorithm used to hash it. An example in Mastodon is shown by listing \ref{fig:http_signature}. 
@@ -183,17 +183,17 @@ This endpoint allows the discovery of host information using a lightweight metad
 \end{lstlisting}
 
 \subsubsection*{\textbf{Webfinger}}
-Mastodon relies on the Webfinger protocol for the resolving process and its federated functioning \cite{rochko_2020}. It is an HTTP-based protocol that allows for discovering information about persons or other entities on the Internet. This information can be a personal profile, an address, an identity service, a telephone number or an email \cite{jones_salgueiro_jones_smarr_2013}. Performing a query to a WebFinger endpoint requires a query component with a resource parameter, which is the URI that identifies the identity that is being looked up. Mastodon employs the \emph{acct}\footnote{https://datatracker.ietf.org/doc/html/rfc7565} URI format, which aims to offer a scheme that generically identifies a user's account with a service provider without requiring a specific protocol. Webfinger's response consists of a \emph{JSON Resource Descriptor} (JRD) document describing the entity \cite{jones_salgueiro_jones_smarr_2013}. Fig. \label{Webfinger response from mastodon.social} shows an example of the returned JRD document provided by the WebFinger endpoint of the \emph{mastodon.social}\footnote{https://mastodon.social} instance when querying the account \emph{acct:bob@mastodon.social}.
+Mastodon relies on the Webfinger protocol for the resolving process and its federated functioning \cite{rochko_2020}. It is an HTTP-based protocol that allows for discovering information about persons or other entities on the Internet. This information can be a personal profile, an address, an identity service, a telephone number or an email \cite{jones_salgueiro_jones_smarr_2013}. Performing a query to a WebFinger endpoint requires a query component with a resource parameter, which is the URI that identifies the identity that is being looked up. Mastodon employs the \emph{acct}\footnote{https://datatracker.ietf.org/doc/html/rfc7565} URI format, which aims to offer a scheme that generically identifies a user's account with a service provider without requiring a specific protocol. Webfinger's response consists of a \emph{JSON Resource Descriptor} (JRD) document describing the entity \cite{jones_salgueiro_jones_smarr_2013}. Figures \ref{fig:webfinger_response} and \ref{fig:webfinger_request} show an example of a request and of the returned JRD document provided by the WebFinger endpoint of the \emph{mastodon.social}\footnote{https://mastodon.social} instance when querying the account \emph{acct:bob@mastodon.social}.
 
 \lstset{style=JSONStyle}
-\begin{lstlisting}[language=PHP, caption=HTTP request to Webfinger endpoint, label=Webfinger request, float=h]
+\begin{lstlisting}[language=PHP, caption=HTTP request to Webfinger endpoint, label=fig:webfinger_request, float=h]
   GET /.well-known/webfinger?resource=acct:bob@mastodon.social
   Host: mastodon.social
   Accept: application/xrd+xml
 \end{lstlisting}
 
 \lstset{style=JSONStyle}
-\begin{lstlisting}[language=PHP, caption=Webfinger response, label=Webfinger response from mastodon.social, float=h]
+\begin{lstlisting}[language=PHP, caption=Webfinger response from mastodon.social, label=fig:webfinger_response, float=h]
 {
    "subject": "acct:bob@mastodon.social",
    "aliases": [
@@ -215,12 +215,10 @@ Mastodon relies on the Webfinger protocol for the resolving process and its fede
 }
 \end{lstlisting}
 
-
-\pagebreak
 % ------------Extending ActivityPub------------------------------------
 \section{Extending ActivityPub}\label{sec:extending_activitypub}
 
-This thesis is not the first attempt to address the deficiencies of the ActivityPub protocol. The co-author of ActivityPub, Christopher Webber, and the co-author of the DID specification Manu Sporny presented a different approach during the Rebooting Web of Trust\footnote{https://www.weboftrust.info/} summit in 2017 \cite{webber_sporny_2017}. This approach includes the following features:
+This thesis is not the first attempt to address the deficiencies of the ActivityPub protocol. The co-author of ActivityPub, Christopher Webber, and the co-author of the DID specification Manu Sporny presented a different approach during the Rebooting Web of Trust\footnote{https://www.weboftrust.info/} summit in 2017 \cite{webber_sporny_2017}. Their approach includes the following features:
 
 \subsection*{\textbf{End-To-End Encryption}}\label{subsec:e2e}
 
@@ -303,8 +301,8 @@ The authors opted to combine the actor object into the DID document, allowing al
   }
 \end{lstlisting}
 
-
-Mastodon implemented another approach to extending ActivityPub, which consists of an end-to-end encryption API\footnote{https://github.com/mastodon/mastodon/pull/13820}. This API was the result of a long-discussed feature request\footnote{https://github.com/mastodon/mastodon/issues/1093} for an Off-The-Record\footnote{https://otr.im/}  (OTR) endpoint for direct messages. In this discussion, different alternatives were mentioned, such as using the PGP-based Mailvelope\footnote{https://mailvelope.com/en}, which provides end-to-end mail encryption; or the Message Layer Security (MLS)\footnote{https://datatracker.ietf.org/doc/draft-ietf-mls-protocol/} from the IETF. In the end, they added an API to send messages using the Matrix\footnote{https://matrix.org/docs/projects/other/olm} implementation of the Double Ratchet Algorithm\footnote{https://signal.org/docs/specifications/doubleratchet/}, which is part of the protocol used in the messaging app Signal\footnote{https://signal.org}. With these endpoints, it is possible to register a device with a key generated by Mastodon and to send encrypted messages to specific devices of other people.
+\subsection*{\textbf{Mastodon's Encryption API}}
+Furthermore, another approach to extending ActivityPub was implemented in Mastodon. This approach consists of an end-to-end encryption API\footnote{https://github.com/mastodon/mastodon/pull/13820}, that was the result of a long-discussed feature request\footnote{https://github.com/mastodon/mastodon/issues/1093} for an Off-The-Record\footnote{https://otr.im/}  (OTR) endpoint for direct messages. In this discussion, different alternatives were mentioned, such as using the PGP-based Mailvelope\footnote{https://mailvelope.com}, which provides end-to-end mail encryption; or the Message Layer Security (MLS)\footnote{https://datatracker.ietf.org/doc/draft-ietf-mls-protocol/} from the IETF. In the end, they added an API to send messages using the Matrix\footnote{https://matrix.org/docs/projects/other/olm} implementation of the Double Ratchet Algorithm\footnote{https://signal.org/docs/specifications/doubleratchet/}, which is part of the protocol used in the messaging app Signal\footnote{https://signal.org}. With these endpoints, it is possible to register a device with a key generated by Mastodon and to send encrypted messages to specific devices of other people.
 
 This implementation follows the same idea proposed by Webber and Sporny in \ref{subsec:e2e}. Nonetheless, it is still unclear why Mastodon has kept this feature \emph{hidden}. There is no documentation, and designing a UI for it is not planned. Therefore, preventing people from knowing and taking advantage of it. For an example of an encrypted Activity using this endpoint see appendix \ref{appendix:e2e}. 
 
@@ -374,13 +372,13 @@ The last major component in this architecture overview is the one in charge of r
   \item \textbf{Static DIDs}: This type of DIDs are limited in the kind of operations that can be performed on them. These DIDs are not stored in any VDR. Consequently, it is not possible to update, deactivate or rotate them. Using the \emph{did:key} method as an example, the DID-method-specific part of the DID is encoded in a way that the DID document can be extracted from it.\cite{longley_zagidulin_sporny_2022}.
 \end{itemize}
 
-Designing a DID method comprises different tasks such as defining if and how a DID will be anchored to a VDR, selecting if CRUD operations are possible and how to perform them, and defining privacy and security mechanisms like verification method rotations or DID recovery. Some platforms behind these DID methods include the former Uport, with \emph{did:ethr}; Sovrin Foundation, with \emph{did:sov}; and the DIF with \emph{did:ion}.
+Designing a DID method comprises different tasks such as defining if and how a DID will be anchored to a VDR, selecting if CRUD operations are possible and how to perform them, and defining privacy and security mechanisms such as verification method rotations or DID recovery. Some platforms behind these DID methods include the former Uport, with \emph{did:ethr}; Sovrin Foundation, with \emph{did:sov}; and the DIF with \emph{did:ion}.
 
 % --------------DIDComm-----------------------
 \section{DIDComm Messaging}\label{section:didcomm}
 
-The Hyperledger Foundation is an open-source collaborative effort intended to develop blockchain technologies across industries further \cite{jones_boswell_2022}. Started in 2016 by the Linux Foundation, it has given birth to numerous enterprise-grade software open-source projects that can be classified into DLTs, libraries, tools, and labs \cite{lusard_lehors_muscara_boswell_zsigri_2021}. One of these graduate projects is Hyperledger Aries, which, together with Hyperledger Indy (HI) and Hyperledger Ursa (HU), makes up the Sovereign Identity Blockchain Solutions of Hyperledger. HI supplies a distributed ledger specifically built for decentralized identity, and  HU is a shared cryptography library that helps avoid duplicating cryptographic work across projects while potentially increasing security. Finally, Aries provides solutions for SSI-based identity management, including key management, credential management, and an encrypted, peer-to-peer DID-based messaging system that is now labeled as DIDComm v1 \cite{jones_boswell_2022}. 
-Based on DIDComm v1, the DIF's Communication Working Group (CWG) has implemented DIDComm v2. The CWG pursues the standardization of DIDComm v2 not only to widen its implementation beyond Aries-based projects but to create an interoperable layer that allows higher-order protocols to build upon its security, privacy, decentralization, and transport independence in the same way web services build upon HTTP. \cite{young_2020} \cite{curren_looker_terbu_2020}
+The Hyperledger Foundation is an open source collaborative effort intended to develop block-\\chain technologies across industries \cite{jones_boswell_2022}. Started in 2016 by the Linux Foundation, it has given birth to numerous enterprise-grade software open-source projects that can be classified into DLTs, libraries, tools, and labs \cite{lusard_lehors_muscara_boswell_zsigri_2021}. One of these graduate projects is Hyperledger Aries, which, together with Hyperledger Indy (HI) and Hyperledger Ursa (HU), makes up the Sovereign Identity Blockchain Solutions of Hyperledger. HI supplies a distributed ledger specifically built for decentralized identity, and  HU is a shared cryptography library that helps avoid duplicating cryptographic work across projects while potentially increasing security. Finally, Aries provides solutions for SSI-based identity management, including key management, credential management, and an encrypted, peer-to-peer DID-based messaging system that is now labeled as DIDComm v1 \cite{jones_boswell_2022}. 
+Based on DIDComm v1, the DIF's Communication Working Group (CWG) has implemented DIDComm v2. The CWG pursues the standardization of DIDComm v2 not only to widen its implementation beyond Aries-based projects but to create an interoperable layer that allows higher-order protocols to build upon its security, privacy, decentralization, and transport independence in the same way web services build upon HTTP \cite{young_2020} \cite{curren_looker_terbu_2020}.
 
 From this point on, the term \emph{DIDComm} will refer exclusively to DIDComm Messaging v2. DIDComm can be described as a communication protocol that promises a secure and private methodology that builds on top of the decentralized design of DIDs. It is a versatile protocol that supports a wide range of features, such as security, privacy, decentralization, extensibility, interoperability, and the ability to be transport-agnostic \cite{curren_looker_terbu_2020}.
 
