--- a/Thesis/content/04_implementation.tex
+++ b/Thesis/content/04_implementation.tex
@@ -93,7 +93,7 @@ Adding the ActivityPub service endpoint to the DID documents of Bob and Alice Ve
   }
 \end{lstlisting}
 
-The next step was adding the public key to the DID document. Mastodon generates an RSA keypair for an account when the account is created. After creating the accounts for Alice and Bob, it was possible to retrieve the public key, which needed to be added to the DID document. Veramo's API offers a way to add different kinds of cryptographic keys to a DID document, however, the only available key types that could be added were the \emph{Ed25519}, \emph{Secp256k1}, and the  \emph{X25519} from the \emph{Elliptic Curve Cryptography} (ECC) family of cryptosystems. This represented a considerable complication because the already selected library for the JWT tokens did not have support for these types of keys. Luckily, after researching possible workarounds, one of the main developers of the Veramo project assisted and developed a way to \emph{force} an RSA key into the DID document. The parameters required to add a key are a type, the \emph{kid}, Key ID; and the public key of the RSA key in Base16 encoding, as shown in listing \ref{fig:add_key_payload}. Furthermore, the final DID document for Alice can be seen in appendix \ref{lst:alice_ethr_doc}. 
+The next step was adding the public key to the DID document. Mastodon generates an RSA keypair for an account when the account is created. After creating the accounts for Alice and Bob, it was possible to retrieve the public key, which needed to be added to the DID document. Veramo's API offers a way to add different kinds of cryptographic keys to a DID document, however, the only available key types that could be added were the \emph{Ed25519}, \emph{Secp256k1}, and the  \emph{X25519} from the \emph{Elliptic Curve Cryptography} (ECC) family of cryptosystems. This represented a considerable complication because the already selected library for the JWT tokens did not have support for these types of keys. Luckily, after researching possible workarounds, one of the main developers of the Veramo project assisted and developed a way to \emph{force} an RSA key into the DID document\footnote{https://gist.github.com/mirceanis/8a6a3b118db3624f402c9644af4cd8b4}. The parameters required to add a key are a type, the \emph{kid}, Key ID; and the public key of the RSA key in Base16 encoding, as shown in listing \ref{fig:add_key_payload}. Furthermore, the final DID document for Alice can be seen in appendix \ref{lst:alice_ethr_doc}. 
 
 \lstset{style=JSONStyle}
 \begin{lstlisting}[language=PHP, caption=Adding an RSA key using Veramo, label=fig:add_key_payload, float=h]
