--- a/Thesis/content/05_evaluation.tex
+++ b/Thesis/content/05_evaluation.tex
@@ -12,7 +12,7 @@ However, the deeply nested use of HTTPS in Mastodon's codebase did not allow tes
 
 \subsection{Resolving Process}
 The current implementation of Mastodon relies on the Webfinger protocol, which itself relies on the DNS, to resolve \emph{username@domain} usernames to an actor object. The DNS builds the foundation of daily Internet activity. As a centralized service, being so involved in the critical part of the Internet makes it a valuable target for attacks \cite{carli2003security}. A single institution controls it, the ICANN\footnote{https://www.icann.org/}, that until 2016 was under the control of one single country \cite{lee_2016}. 
-By integrating ledger-based DIDs, this dependency on Webfinger and the DNS was only partially removed. Resolving a DID does not require the DNS to be successful. However, the service endpoint in the DID document still includes the domain of the Mastodon instance where it resides. To retrieve the actor object of the user being looked up, an HTTP GET request to the service endpoint is necessary. This means that a DNS resolution will still take place. On the contrary, the approach of the coauthors of ActivityPub and the DIDs mentioned in \ref{sec:extending_activitypub} completely removes the DNS dependency by using The Router Onion \emph{(Tor)} to host the ActivityPub server \cite{webber_sporny_2017}. This indicates that if Mastodon were running in a DNS-free space, the design would achieve a fully-decentralized resolving process. 
+By integrating ledger-based DIDs, this dependency on Webfinger and the DNS was only partially removed. Resolving a DID does not require the DNS to be successful. However, the service endpoint in the DID document still includes the domain of the Mastodon instance where it resides. To retrieve the actor object of the user being looked up, an HTTP GET request to the service endpoint is necessary. This means that a DNS resolution will still take place. On the contrary, the approach of the coauthors of ActivityPub and the DIDs mentioned in \ref{sec:extending_activitypub} completely removes the DNS dependency by using The Onion Router \emph{(Tor)} to host the ActivityPub server \cite{webber_sporny_2017}. This indicates that if Mastodon were running in a DNS-free space, the design would achieve a fully-decentralized resolving process. 
  
 \subsection{Identity Management} \label{ev:idm}
 
