--- a/Thesis/content/00_frontpages/00_frontpage.tex
+++ b/Thesis/content/00_frontpages/00_frontpage.tex
@@ -27,7 +27,7 @@
 		Department of Telecommunication Systems\\
 		Service-centric Networking\\
 		\vspace{0.5cm}
-		Master's Thesis\\
+		Bachelor Thesis\\
 		\vspace{2.2cm}
 		\today\\
 		\vspace{2.0cm}
@@ -36,7 +36,7 @@
 		Prof. Dr. Axel Küpper\\
 		\vspace{1cm}
 		Assistant supervisor:\\
-		Dr. Sebastian Göndör
+		Prof. Dr. Rüdiger Zarnekow
 		\end{center}
          		%\includegraphics[scale=1.0]{images/watermark.png}
 \end{titlepage}
