--- a/Thesis/content/00_frontpages/00_frontpage.tex
+++ b/Thesis/content/00_frontpages/00_frontpage.tex
@@ -10,7 +10,7 @@
 	\vspace{1cm}
 		\Huge
 		\begin{spacing}{.9}
-			\textcolor{DarkRed}{\textbf{Integrating DIDComm Messaging to ActivityPub-based Social Networks}}\\
+			\textcolor{DarkRed}{\textbf{Integrating DIDComm Messaging in ActivityPub-based Social Networks}}\\
 		\end{spacing}
 		\vspace{0.8cm}
 		\large
